--- a/TestAppForItInnovations/Base.lproj/Main.storyboard
+++ b/TestAppForItInnovations/Base.lproj/Main.storyboard
@@ -1,24 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ghp-a1-u7S">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Search-->
+        <scene sceneID="Lm6-60-r87">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="ZdK-Zt-d3N" customClass="MainViewController" customModule="TestAppForItInnovations" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qhH-cq-RJ1">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="80" id="qzX-7p-oBV" customClass="PersonTableViewCell" customModule="TestAppForItInnovations" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="80"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qzX-7p-oBV" id="GjO-r6-pwU">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place of work" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RWE-Mp-7p5">
+                                            <rect key="frame" x="20" y="31" width="302" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="302" id="CI9-iv-yq7"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLa-Ah-5WT">
+                                            <rect key="frame" x="20" y="53" width="302" height="16"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="302" id="lrQ-s0-W9Q"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t1t-rL-k7Z">
+                                            <rect key="frame" x="330" y="21" width="22" height="38"/>
+                                            <state key="normal" image="book" catalog="system"/>
+                                            <connections>
+                                                <action selector="PDFButtonTapped:" destination="qzX-7p-oBV" eventType="touchUpInside" id="ZpV-zX-XEp"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G3t-x7-cwX">
+                                            <rect key="frame" x="362" y="21" width="22" height="38"/>
+                                            <state key="normal" image="star" catalog="system"/>
+                                            <connections>
+                                                <action selector="favoriteButtonTapped:" destination="qzX-7p-oBV" eventType="touchUpInside" id="6i5-gS-xrA"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gy8-3J-vjM">
+                                            <rect key="frame" x="20" y="11" width="302" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="302" id="Bgd-NU-wgK"/>
+                                                <constraint firstAttribute="height" constant="18" id="TEP-w0-hOM"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="gy8-3J-vjM" firstAttribute="leading" secondItem="GjO-r6-pwU" secondAttribute="leadingMargin" id="CF9-a7-C22"/>
+                                        <constraint firstItem="gy8-3J-vjM" firstAttribute="top" secondItem="GjO-r6-pwU" secondAttribute="topMargin" id="Eci-q2-vJj"/>
+                                        <constraint firstItem="JLa-Ah-5WT" firstAttribute="leading" secondItem="GjO-r6-pwU" secondAttribute="leadingMargin" id="Ghh-4z-hnL"/>
+                                        <constraint firstItem="t1t-rL-k7Z" firstAttribute="top" secondItem="GjO-r6-pwU" secondAttribute="topMargin" constant="10" id="Np5-2M-J3Z"/>
+                                        <constraint firstItem="JLa-Ah-5WT" firstAttribute="top" secondItem="RWE-Mp-7p5" secondAttribute="bottom" constant="4" id="PRO-zc-Zl1"/>
+                                        <constraint firstItem="RWE-Mp-7p5" firstAttribute="leading" secondItem="GjO-r6-pwU" secondAttribute="leadingMargin" id="Rh4-Jr-9Mn"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="G3t-x7-cwX" secondAttribute="trailing" constant="10" id="Sn4-Uj-Ce8"/>
+                                        <constraint firstItem="RWE-Mp-7p5" firstAttribute="top" secondItem="gy8-3J-vjM" secondAttribute="bottom" constant="2" id="dpq-h5-sJk"/>
+                                        <constraint firstItem="JLa-Ah-5WT" firstAttribute="top" secondItem="RWE-Mp-7p5" secondAttribute="bottom" constant="4" id="gzD-gU-wbY"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="t1t-rL-k7Z" secondAttribute="bottom" constant="10" id="jYw-DM-7qU"/>
+                                        <constraint firstItem="G3t-x7-cwX" firstAttribute="leading" secondItem="t1t-rL-k7Z" secondAttribute="trailing" constant="10" id="moH-C8-ZX4"/>
+                                        <constraint firstItem="JLa-Ah-5WT" firstAttribute="bottom" secondItem="GjO-r6-pwU" secondAttribute="bottomMargin" id="q2S-5b-B8p"/>
+                                        <constraint firstItem="G3t-x7-cwX" firstAttribute="top" secondItem="GjO-r6-pwU" secondAttribute="topMargin" constant="10" id="qVy-gv-6IX"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="G3t-x7-cwX" secondAttribute="bottom" constant="10" id="v8p-tk-cqD"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="PDFButtonOutlet" destination="t1t-rL-k7Z" id="x4v-bq-9E1"/>
+                                    <outlet property="favoriteButtonOutlet" destination="G3t-x7-cwX" id="dXk-Sr-T7v"/>
+                                    <outlet property="fullNameLabel" destination="gy8-3J-vjM" id="vxG-t1-2vA"/>
+                                    <outlet property="placeOfWorkLabel" destination="RWE-Mp-7p5" id="CVb-mA-g1o"/>
+                                    <outlet property="positionLabel" destination="JLa-Ah-5WT" id="ueP-xe-jnq"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ZdK-Zt-d3N" id="FZO-cL-Ybt"/>
+                            <outlet property="delegate" destination="ZdK-Zt-d3N" id="zl7-Hu-Prh"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Search" id="DFB-En-ExD"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V5G-G8-z8x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="223.18840579710147" y="70.982142857142847"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="uYZ-ae-sUN">
+            <objects>
+                <navigationController id="ghp-a1-u7S" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aGm-e0-2ae">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="ZdK-Zt-d3N" kind="relationship" relationship="rootViewController" id="0fr-EO-0Lg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SyI-OZ-bkz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-694" y="70"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="book" catalog="system" width="64" height="50"/>
+        <image name="star" catalog="system" width="64" height="58"/>
+    </resources>
 </document>
